Remove authentication from webapp, integrate sdk, add virtualized scrolling, update user interface,...

--- a/Howest.Movies.WebApp/_Imports.razor
+++ b/Howest.Movies.WebApp/_Imports.razor
@@ -9,3 +9,14 @@
 @using Microsoft.JSInterop
 @using Howest.Movies.WebApp
 @using Howest.Movies.WebApp.Layout
+@using Howest.Movies.WebApp.Components
+@using Howest.Movies.Dtos.Results
+@using Howest.Movies.Dtos.Requests
+@using Howest.Movies.Dtos.Core
+@using MudBlazor
+
+<script>
+    window.isScrollAtBottom = function (container) {
+        return container.scrollHeight - container.scrollTop === container.clientHeight;
+    };
+</script>
