--- a/Howest.Movies.WebApp/Layout/MainLayout.razor
+++ b/Howest.Movies.WebApp/Layout/MainLayout.razor
@@ -1,17 +1,27 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
 
-    <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay/>
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+<MudThemeProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+<MudLayout>
+    <MudAppBar>
+        <MudInputControl>
+            <MudInput  T="string" AdornmentIcon="@Icons.Material.Filled.Search" Adornment="Adornment.Start" @bind-Value="Query" Margin="Margin.Dense" Variant="Variant.Outlined" Placeholder="Search"
+                       Style="background: #adb5bd; color: black; border-radius: .5em;"></MudInput>
+        </MudInputControl>
+        <MudSpacer/>
+        <MudIconButton Icon="@Icons.Material.Filled.Login" Color="Color.Inherit"/>
+    </MudAppBar>
+    <MudMainContent>
+        <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge">
+            <CascadingValue Value="@Query">
+                @Body
+            </CascadingValue>
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
+
+@code {
+    public string Query { get; set; } = string.Empty;
+}
