--- a/Howest.Movies.WebApp/Layout/MainLayout.razor
+++ b/Howest.Movies.WebApp/Layout/MainLayout.razor
@@ -7,8 +7,7 @@
 <MudLayout>
     <MudAppBar>
         <MudInputControl>
-            <MudInput  T="string" AdornmentIcon="@Icons.Material.Filled.Search" Adornment="Adornment.Start" @bind-Value="Query" Margin="Margin.Dense" Variant="Variant.Outlined" Placeholder="Search"
-                       Style="background: #adb5bd; color: black; border-radius: .5em;"></MudInput>
+            <MudInput T="string" AdornmentIcon="@Icons.Material.Filled.Search" Adornment="Adornment.Start" @bind-Value="Query" Margin="Margin.Dense" Variant="Variant.Outlined" Placeholder="Search" Style="background: #edfff2; color: black; border-radius: .3em;"></MudInput>
         </MudInputControl>
         <MudSpacer/>
         <MudIconButton Icon="@Icons.Material.Filled.Login" Color="Color.Inherit"/>
