--- a/Howest.Movies.WebApp/Components/MovieCard.razor
+++ b/Howest.Movies.WebApp/Components/MovieCard.razor
@@ -1,7 +1,7 @@
 ﻿@inject NavigationManager NavigationManager
 
 <MudStack Style="display: block;width: 200px" @onclick="NavigateToMovieDetails">
-    <MudImage Src="@Movie.Poster" Alt="@Movie.Title" ></MudImage>
+    <MudImage Src="@Movie.Poster" Alt="@Movie.Title" Style="border-radius: .5em;"></MudImage>
     <MudTooltip Text="@Movie.Title" Placement="Placement.Top">
         <MudText Typo="Typo.body1" Align="Align.Left" Class="text-truncate"><b>@Movie.Title</b></MudText>
     </MudTooltip>
