Add tokenstore and management

--- a/Howest.Movies.WebApp/Components/Dialogs/LoginDialog.razor
+++ b/Howest.Movies.WebApp/Components/Dialogs/LoginDialog.razor
@@ -32,8 +32,7 @@
 
         MudDialog.Close(DialogResult.Ok(new User
         {
-            Email = _model.Email,
-            LoginResult = result.Data
+            Email = _model.Email
         }));
     }
     void Cancel() => MudDialog.Cancel();
